# git-utils

./: README.md  setup.cfg
git/utils/: __init__.py  __main__.py
git_utils/: codecommit.py  repo.py  util.py
git_utils/github/: __init__.py  __main__.py  api.py  client.py
git_utils/remote_tags/: __main__.py
git_utils/statuses/: __main__.py
git_utils/summary/: __main__.py  snapshot.py
tests/: test_repo.py  test_util.py
