[metadata]
name = git-utils
author = Christopher Brown
author_email = io@henrian.com
url = https://github.com/chbrown/git-utils
description = Git utilities
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = git_utils
python_requires = >=3.6
install_requires =
  click>=7.0
  GitPython>=3.0.0
  requests>=2.20.0
setup_requires =
  pytest-runner
  setuptools-scm
tests_require =
  pytest
  pytest-black
  pytest-cov

[options.entry_points]
console_scripts =
  github-api = git_utils.github.__main__:main
  git-statuses = git_utils.statuses.__main__:main

[aliases]
test = pytest

[tool:pytest]
addopts =
  --black
  --cov=git_utils
  --cov-branch

[bdist_wheel]
universal = 1
